# Star-Forge

./: .gitignore  CMakeLists.txt
data/nanosuit/: .gitattributes
examples/: CMakeLists.txt  cube.cpp  cubeMesh.cpp  example.rc  model.cpp  triangle.cpp
include/: Cube.hpp  DefaultShaders.hpp  Geode.hpp  GroupNode.hpp  Mesh.hpp  Model.hpp  OpenGLRenderDevice.hpp  RenderDevice.hpp
source/: CMakeLists.txt  Cube.cpp  DefaultShaders.cpp  GLFW_Platform.cpp  GroupNode.cpp  Mesh.cpp  Model.cpp  OpenGLRenderDevice.cpp  RenderDevice.cpp
